# SyntheseOSPart1

./: CMakeLists.txt  main.c
domain/chap2/: temperature.c  temperature.h
domain/chap3/: chaineCaractere.c  chaineCaractere.h
view/: mainMenu.c  mainMenu.h
view/chap2/: temperatureMenu.c  temperatureMenu.h
view/chap3/: chaineCaractereMenu.c  chaineCaractereMenu.h
